--- a/src/personalBlog.properties
+++ b/src/personalBlog.properties
@@ -1,7 +1,7 @@
 dbUrl=jdbc:mysql://localhost:3306/db_blog
 dbUserName=root
-dbPassword=Broadway32
+dbPassword=123456
 jdbcName=com.mysql.jdbc.Driver
-pageSize=4
+pageSize=10
 imageFile=userImages/
-imagePath=D:\\Diary\\WebContent\\userImages\\
+imagePath=C:\\Users\\llin\\InteProject\\PersonalBlog\\web\\userImages\\
